--- a/frontend/src/app/pages/mobile/mainpage/home/home.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/home/home.component.html
@@ -33,7 +33,7 @@
         </button>
     </div>
 
-    <div id="popcard" (click)="toggleCard()"  [class.move] ="!card_open" *ngIf="cardinit">
+    <div id="popcard" (click)="toggleCard()"  [class.move] ="card_open" *ngIf="cardinit">
         <svg width="79" height="3" viewBox="0 0 79 3" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect width="79" height="3" rx="1.5" fill="#C4C4C4" />
         </svg>
