--- a/frontend/src/app/pages/mobile/mainpage/mainpage.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/mainpage.component.html
@@ -1,24 +1,30 @@
 <div *ngIf="initialized" class="background" [style.background-color]="isDay() ?  '#E67E22' : '#34495E'">
-    <mat-tab-group headerPosition="below" [disableRipple]=true [selectedIndex]="selectedTab">
+    <mat-tab-group *ngIf="!gameEnded" headerPosition="below" [disableRipple]=true [selectedIndex]="selectedTab">
         <mat-tab>
             <ng-template mat-tab-label>
                 <img src="/assets/mobile/infonavbar.png" alt="Info">
             </ng-template>
             <ami-fullstack-info></ami-fullstack-info>
         </mat-tab>
-        <mat-tab >
+        <mat-tab>
             <ng-template mat-tab-label>
                 <img src="/assets/mobile/homenavbar.png" alt="Home">
             </ng-template>
             <ami-fullstack-home></ami-fullstack-home>
         </mat-tab>
-        <mat-tab
-          [disabled]="!isVoting()"> 
+        <mat-tab [disabled]="!isVoting()">
             <ng-template mat-tab-label>
                 <img src="/assets/mobile/votingnavbar.png" alt="Voting">
             </ng-template>
             <ami-fullstack-voting></ami-fullstack-voting>
         </mat-tab>
     </mat-tab-group>
+    <div id="endScreen" *ngIf="gameEnded">
+        <div>Game over!</div>
+
+        <div id="text_won" *ngIf="won">You Won!</div>
+        <div id="text_lost"  *ngIf="!won">You Lost!</div>
+    </div>
+
     <router-outlet></router-outlet>
 </div>
