final changes checked doctor/detective

--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -46,8 +46,10 @@
 }
 
 .cardicon {
-  height: 90%;
-  width: auto;
+  max-height: 90%;
+  max-width: 90%;
+  width:auto; 
+  height:auto;
   margin: auto;
 }
 
