wall almost ready, needs fixing: in descr
change the image of dead after day1 and skip i=2 in loop for suspects html

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,5 @@
-<ami-fullstack-virtual></ami-fullstack-virtual>
+<ami-fullstack-virtual [elements2Check] = "['.butt']"></ami-fullstack-virtual>
 
 <div id="container">
-
     <router-outlet></router-outlet>
 </div>
