Hover effect ready

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ami-fullstack-virtual [elements2Check] = "['.butt']"></ami-fullstack-virtual>
+<ami-fullstack-virtual [elements2Check] = "['.butt']" [waitingTime] = "250"></ami-fullstack-virtual>
 
 <div id="container">
     <router-outlet></router-outlet>
