--- a/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
+++ b/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
@@ -6,7 +6,7 @@
       <div class="column" id="timeline" [ngStyle]="{display:(lap > 1)?'block':'none'}" (click)="swipeTimelineDown();">
         <img class="game_start" src="/assets/interactive-wall/game_start.png"
           [ngStyle]="{display:(lap > 1)?'inherit':'none'}" alt="game start">
-        <div *ngFor="let phase of phases; let i=index; let even=even" style="height: 175px;">
+        <div *ngFor="let phase of phases; let i=index" style="height: 175px;">
           <div class="timelineRow">
             <div class="circleAndText">
               <img class="circle"
@@ -29,12 +29,12 @@
       <div id="narrator_title" [ngStyle]="{display:(lap == 0)?'block':'none'}">Select Narrator:</div>
     </div>
     <div class="button_container row" [ngStyle]="{'margin-top':(lap != 0)?'6%':'0%'}">
-      <div class="butt plyr_butt" [ngStyle]="{display:(lap == 0)?'block':'none'}">
+      <div class="butt plyr_butt" id="playernar"[ngStyle]="{display:(lap == 0)?'block':'none'}">
         <img id="player_icon" src="/assets/interactive-wall/player_icon.png" alt="player icon">
         <p>Player</p>
       </div>
-      <div class="butt spkr_butt" (click)="speakerSelected()" [ngStyle]="{display:(1 >= lap)?'block':'none'}"
-        [ngStyle]="{opacity:(lap != 0)?'1':'0.6'}"> 
+      <div class="butt spkr_butt" id="smartSpeaker" (click)="speakerSelected();" [ngStyle]="{display:(1 >= lap)?'block':'none'}"
+        [ngStyle]="{opacity:(lap != 0)?'1':'0.6'}">
         <img id="speaker" src="/assets/interactive-wall/speaker.png" alt="speaker icon">
         <p>Speaker</p>
       </div>
