--- a/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
+++ b/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
@@ -15,10 +15,10 @@
               <div id="day_txt" [ngStyle]="{display:(lap > 1)?'block':'none'}">{{phases[i]}} {{phases_num_array[i]}}
               </div>
             </div>
-            <div *ngFor="let suspect of suspects_pngs.get(i+1);" class="suspects">
+            <div *ngFor="let suspect of suspects_pngs.get(i); let j=index;" class="suspects">
               <img class="suspect" src="/assets/interactive-wall/{{suspect}}" alt="avatar of suspect">
               <div id="voters" [ngStyle]="{width:(expand_width)?'225px':'170px'}">
-                <div *ngFor="let voter of voters_pngs.get(suspect);">
+                <div *ngFor="let voter of voters_pngs.get(j+1);">
                   <img class="voter" src="/assets/interactive-wall/{{voter}}" alt="avatar of suspect">
                 </div>
               </div>
