Bots voting, bots done
fix with votes on table and wall restart

--- a/frontend/src/app/pages/bots/bots.component.html
+++ b/frontend/src/app/pages/bots/bots.component.html
@@ -3,7 +3,17 @@
         <h2> Game Utilities </h2>
         <div class="buttons">
             <button class="bt" (click)="restart()">Restart Game</button>
+            <button class="bt" (click)="addBots()">Add bots</button>
             <button class="bt" (click)="start()">Start Game</button>
+        </div>
+    </div>
+    <div class="util">
+        <h2> Voting </h2>
+        <div class="buttons">
+            <button class="bt" (click)="voteAll()">All vote</button>
+            <button class="bt" (click)="mafiaVote()">Mafia vote</button>
+            <button class="bt" (click)="doctorVote()">Doctor vote</button>
+            <button class="bt" (click)="barmanVote()">Barman vote</button>
         </div>
     </div>
 </div>
