--- a/frontend/src/app/pages/bots/bots.component.scss
+++ b/frontend/src/app/pages/bots/bots.component.scss
@@ -4,6 +4,14 @@
     text-align: center;
 }
 
+.util {
+    margin: 3%;
+}
+
+.util h2 {
+    margin: 2%;
+}
+
 .buttons {
     display: flex;
     justify-content: space-evenly;
