--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -316,6 +316,12 @@
   z-index: 1;
 }
 
+.death_backgrNight{
+  position: absolute;
+  right: 0;
+  top: 197px;
+}
+
 .dead_container {
   z-index: 2;
 }
@@ -326,15 +332,33 @@
   top: 100px;
 }
 
-.deadReveal {
+.deadIcon2 {
+  position: absolute;
+  left: 640px;
+  top: 585px;
+  z-index: 2;
+}
+
+.deadRevealDay {
   position: absolute;
   left: 392px;
   top: 115px;
-
+  z-index: 2;
   font-style: normal;
   font-weight: normal;
   font-size: 96px;
   line-height: 100px;
+}
+
+.deadRevealNight {
+  position: absolute;
+  left: 240px;
+  top: 270px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 96px;
+  line-height: 100px;
+  z-index: 2;
 }
 
 .deadReveal2 {
@@ -364,9 +388,9 @@
 
 .cardOfDead {
   position: absolute;
-  width: 320px;
-  height: 350px;
+  width: 300px;
+  height: 340px;
   z-index: 2;
-  left: 1313px;
-  top: 545px;
+  left: 1320px;
+  top: 535px;
 }
