Resolution fix for 1920px table

--- a/frontend/src/app/pages/augmented-table/augmented-table.component.scss
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.scss
@@ -5,6 +5,12 @@
   overflow: hidden;
   text-align: center;
   overflow: hidden;
+  position: relative;
+}
+@media only screen and (min-width: 1919px) {
+  .all {
+    margin: 0 180px;
+  }
 }
 
 .wrapper {
